# RPico_MIDI-inputs16

./: CMakeLists.txt  access_point.c  access_point.h  definitions.h  form.html  main.c  mount.ps1  settings.c  settings.h  state.c  state.h  status_dispatcher.c  status_dispatcher.h  usb_descriptors.c  utils.c  utils.h
dhcpserver/: dhcpserver.c
experiment-status-dispatcher/: main.c
